practice/traffic/task-2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-advanced
  labels:
    mmelab.io/task: traffic-task-2
    mmelab.io/app: demo-app
  namespace: demo-app
spec:
  ingressClassName: nginx
  rules:
  - host: <IP>.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-app
            port:
              number: 8080
